attempting to fix hidden button issue on iOS

--- a/src/scss/04-components/_basket-drawer.scss
+++ b/src/scss/04-components/_basket-drawer.scss
@@ -16,6 +16,9 @@
   }
 
   .basket-drawer-header {
+    position: sticky;
+    top: 0;
+    left: 0;
     display: grid;
     grid-template-columns: 2.5rem 1fr 2.5rem;
     align-items: center;
@@ -40,9 +43,7 @@
   }
 
   .basket-drawer-body {
-    height: calc(
-      100% - 13rem
-    ); // 100vh - basket-drawer-header (3.75rem) & basket-drawer-footer (9.25rem)
+    // 100vh - basket-drawer-header (3.75rem) & basket-drawer-footer (9.25rem)
     overflow: auto;
     padding: 1.5rem 1.25rem;
   }
@@ -53,7 +54,7 @@
     gap: 0.75rem;
     padding: calc(1.25rem - 1px) 1.25rem 1.25rem 1.25rem; // for border to make height: 9.25rem;
     border-top: 1px solid $grey-border;
-    position: absolute;
+    position: sticky;
     width: 100%;
     max-width: 25rem;
     bottom: 0;
