--- a/src/scss/05-pages/_landing-page.scss
+++ b/src/scss/05-pages/_landing-page.scss
@@ -91,7 +91,7 @@
 @media (min-width: 800px) {
   .header-landing-page {
     .header-landing-page-content {
-      width: fit-content;
+      width: max-content;
       max-width: none;
 
       h1 {
